# openapi.json
@@ -863,86 +863,6 @@
     }
    }
   },
-  "/api/tasks/active": {
-   "get": {
-    "operationId": "get___api_tasks_active",
-    "responses": {
-     "200": {
-      "description": "OK",
-      "content": {
-       "application/json": {
-        "schema": {}
-       }
-      }
-     },
-     "400": {
-      "description": "Bad Request",
-      "content": {
-       "application/json": {
-        "schema": {}
-       }
-      }
-     },
-     "500": {
-      "description": "Internal Error",
-      "content": {
-       "application/json": {
-        "schema": {}
-       }
-      }
-     }
-    }
-   }
-  },
-  "/api/tasks/active/{task_id}": {
-   "post": {
-    "operationId": "post___api_tasks_active_task_id",
-    "parameters": [
-     {
-      "name": "task_id",
-      "in": "path",
-      "required": true,
-      "schema": {
-       "type": "string"
-      }
-     }
-    ],
-    "responses": {
-     "200": {
-      "description": "OK",
-      "content": {
-       "application/json": {
-        "schema": {}
-       }
-      }
-     },
-     "400": {
-      "description": "Bad Request",
-      "content": {
-       "application/json": {
-        "schema": {}
-       }
-      }
-     },
-     "500": {
-      "description": "Internal Error",
-      "content": {
-       "application/json": {
-        "schema": {}
-       }
-      }
-     }
-    },
-    "requestBody": {
-     "required": false,
-     "content": {
-      "application/json": {
-       "schema": {}
-      }
-     }
-    }
-   }
-  },
   "/api/tasks/import": {
    "post": {
     "operationId": "post___api_tasks_import",
